--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,14 @@
   padding: 0;
   box-sizing: border-box;
 }
+html {
+  height: 100%;
+  /* overflow: hidden; */
+}
 
 body {
   background: linear-gradient(180deg, rgb(42, 0, 255) 0%, #5580ff 80%);
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -82,6 +86,15 @@ body {
   justify-content: space-evenly;
   border-radius: 10px;
 }
+.game-info {
+  width: 100%;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  
+}
 .buttons-container {
   display: flex;
   flex-wrap: wrap;
@@ -93,7 +106,7 @@ body {
 
 .styled-button {
   flex-basis: calc(50% - 5px);
-  padding: 10px 20px;
+  padding: 10px 0px;
   font-family: "Press Start 2P", cursive;
   font-size: 1em;
   color: white;
@@ -176,7 +189,8 @@ body {
 
 .next-tetromino-grid {
   display: grid;
-  grid-template-columns: repeat(4, 30px);
+  grid-template-columns: repeat(4, auto);
+  grid-template-rows: repeat(2, auto);
   grid-gap: 5px;
   margin: 0 auto;
 }
@@ -268,4 +282,122 @@ body {
 .btn-ok:hover,
 .btn-cancel:hover {
   background-color: #3658a7;
+}
+
+/* for mobile */
+@media screen and (max-width: 600px) {
+  body {
+    justify-content: flex-start;
+  }
+  .title {
+    margin-top: 20px;
+  }
+
+  .grid {
+    gap: 0.3vh;
+    margin-bottom: 5px;
+  }
+
+  .grid > div {
+    height: min(2vh, 5vh);
+    width: min(2vh, 5vh);
+    border-radius: 0.1vh;
+  }
+  .content {
+    flex-direction: column;
+    width: 95%;
+  }
+
+  .next-tetromino {
+    margin-top: 10px;
+  }
+
+  .next-tetromino h3 {
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    font-size: 10px;
+    margin-top: 0;
+    margin-bottom: 10px;
+  }
+  .next-tetromino-grid > div {
+    height: min(1.5vh, 5vh);
+    width: min(1.5vh, 5vh);
+    border-radius: 0.1vh;
+  }
+
+  .inform {
+    width: 90%;
+    height: 60%;
+    margin: 0;
+    flex-direction: column-reverse;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .game-info {
+    height: auto;
+    flex-direction: row;
+  }
+  .inform-item {
+    width: calc(50% - 10px);
+    margin-bottom: 10px;
+    box-sizing: border-box;
+  }
+
+  .buttons-container {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    width: 99%;
+    gap: 3px;
+    margin-top: 5px;
+  }
+
+  .styled-button {
+    flex: 1;
+    /* padding: 5px 10px; */
+
+    font-size: 0.5em;
+  }
+  .controls-button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.other-buttons {
+    display: flex;
+    justify-content: center;
+}
+
+
+  .control-button {
+    width: 40px; /* Ширина кнопок */
+    height: 40px; /* Висота кнопок */
+    font-size: 18px; /* Розмір шрифту кнопок */
+    background-color: rgba(20, 1, 114, 0.8);
+    border: none;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    margin: 5px; /* Внутрішні відступи між кнопками */
+  }
+
+  /* Стилі для наведення курсора на кнопки */
+  .control-button:hover {
+    background-color: rgba(20, 1, 114, 1);
+  }
+
+  .score-container {
+    width: 50%;
+    height: 60%;
+    margin-top: 10px;
+
+  }
+  .score-title {
+    font-size: 1em;
+  }
+  .score-value {
+    margin-top: 5px;
+    font-size: 0.7em;
+  }
+
 }
