feat/add swipes

--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  touch-action: none;
 }
 html {
   height: 100%;
+  overflow: hidden;
   /* overflow: hidden; */
 }
 
@@ -16,6 +20,7 @@ body {
   justify-content: center;
   align-items: center;
   font-family: "Sarpanch", sans-serif;
+  touch-action: manipulation;
 }
 
 .title {
