--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,6 @@
 html {
   height: 100%;
   overflow: hidden;
-  /* overflow: hidden; */
 }
 
 body {
@@ -242,6 +241,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+  min-width: 400px;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
@@ -249,6 +249,7 @@ body {
 
 .modal-content {
   position: absolute;
+  min-width: 350px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
