--- a/styles.css
+++ b/styles.css
@@ -32,13 +32,18 @@ body {
 }
 
 .content {
+  width: 90%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+.visible-grid{
+  background-color: #3658a7;
+}
 
 .grid {
   background: rgba(20, 1, 114, 0.5);
+
   border-radius: 10px;
   padding: 1vh;
   display: grid;
@@ -50,6 +55,7 @@ body {
   height: min(3vh, 7vh);
   width: min(3vh, 7vh);
   border-radius: 0.3vh;
+
 }
 
 .grid .O {
@@ -80,6 +86,7 @@ body {
   background: rgb(255, 133, 19);
 }
 .inform {
+
   width: 300px;
   height: 100%;
   margin-left: 5px;
@@ -87,28 +94,40 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: flex-start;
   border-radius: 10px;
 }
 .game-info {
   width: 100%;
-  height: 70%;
+  height: 95%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   
 }
 .buttons-container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  width: 90%;
-  gap: 10px;
-  margin-top: 20px;
+  width: 100%;
+  align-items: center;
+  justify-content: flex-end;
+}
+.styled-button{
+  font-family: "Press Start 2P", cursive;
+  font-size: 2em;
+  color: white;
+  background-color: rgba(20, 1, 114, 0);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-right: 5px;
+
+}
+.styled-button:hover {
+  background-color: rgba(20, 1, 114, 1);
 }
 
-.styled-button {
+ .menu-button {
   flex-basis: calc(50% - 5px);
   padding: 10px 0px;
   font-family: "Press Start 2P", cursive;
@@ -120,22 +139,32 @@ body {
   cursor: pointer;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
+.menu-button{
+  margin: 10px;
+}
+.music-button{
+  line-height: 1em;
+  margin: 10px;
+}
 
-.styled-button:hover {
-  background-color: rgba(20, 1, 114, 1);
+.score, .time, .lvl{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .score-container {
   width: 90%;
-  height: 30%;
+  height: 70%;
   background-color: rgba(20, 1, 114, 0.5);
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   border-radius: 15px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
-  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .score-title,
@@ -146,8 +175,7 @@ body {
 }
 
 .score-title {
-  width: 150px;
-  font-size: 2em;
+  font-size: 2em; 
   text-align: center;
   color: rgb(250, 245, 239);
   border-radius: 10px;
@@ -155,10 +183,51 @@ body {
 }
 
 .score-value {
+  margin: auto;
   margin-top: 10px;
   font-size: 1.5em;
   font-weight: bold;
 }
+
+.timer-title,
+.level-title {
+  line-height: 25px;
+  font-family: "Press Start 2P", cursive;
+  color: white;
+  font-size: 1em;
+  margin-bottom: 5px;
+  text-align: center;
+}
+
+#timer,
+#level {
+  font-family: "Press Start 2P", cursive;
+  color: white;
+  font-size: 1.5em;
+  text-align: center;
+}
+
+#timer {
+  padding: 5px;
+  border-radius: 5px;
+}
+
+/* Додаткові стилі для мобільної версії */
+
+@media screen and (max-width: 600px) {
+  .timer-title,
+  .level-title {
+    font-size: 0.8em;
+  }
+
+  #timer,
+  #level {
+    font-size: 1.2em;
+  }
+
+
+}
+
 
 #background-container {
   position: fixed;
@@ -185,6 +254,8 @@ body {
 
 .next-tetromino h3 {
   font-family: "Press Start 2P", cursive;
+  text-align: center;
+  line-height: 25px;
   color: white;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   font-size: 18px;
@@ -236,7 +307,7 @@ body {
   background: rgb(255, 133, 19);
 }
 
-.modal {
+.modal, .modal-menu, #list-container {
   display: none;
   position: fixed;
   top: 0;
@@ -246,8 +317,18 @@ body {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
 }
+ul{
+   text-align: start; ;
+}
+.list-item{
+  list-style-type: none;
+  margin-bottom: 5px;
+}
+.list-item:nth-child(1){
+  margin-top: 30px;
+}
 
-.modal-content {
+.modal-content, .modal-menu-content, #list-container-content {
   position: absolute;
   min-width: 350px;
   top: 50%;
@@ -264,6 +345,12 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
+}
+
+.buttons-menu{
+  display: flex;
+  flex-direction: column;
+
 }
 .buttons {
   display: flex;
@@ -290,10 +377,14 @@ body {
   background-color: #3658a7;
 }
 
+
+
+
+
 /* for mobile */
 @media screen and (max-width: 600px) {
   body {
-    justify-content: flex-start;
+    justify-content: space-evenly;
   }
   .title {
     margin-top: 10px;
@@ -301,7 +392,7 @@ body {
 
   .grid {
     gap: 0.3vh;
-    margin-bottom: 5px;
+    margin: 0 10px 5px 0;
   }
 
   .grid > div {
@@ -310,7 +401,6 @@ body {
     border-radius: 0.1vh;
   }
   .content {
-    flex-direction: column;
     width: 95%;
   }
 
@@ -331,42 +421,27 @@ body {
   }
 
   .inform {
-    width: 90%;
-    height: 60%;
+    width: 40%;
+    height: 100%;
     margin: 0;
-    flex-direction: column-reverse;
-    flex-wrap: wrap;
-    justify-content: space-between;
   }
-  .game-info {
-    height: auto;
-    flex-direction: row;
-  }
-  .inform-item {
-    width: calc(50% - 10px);
-    margin-bottom: 5px;
-    box-sizing: border-box;
-  }
+ 
 
-  .buttons-container {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    width: 99%;
-    gap: 3px;
-    margin-top: 5px;
-  }
 
-  .styled-button {
-    flex: 1;
-    /* padding: 5px 10px; */
+.styled-button{
+  font-size: 1.2em;
+}
 
-    font-size: 0.5em;
-  }
   .controls-button {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 180px;
+    padding: 10px;
+    background-color: rgba(20, 1, 114, 0.5);
+    border: none;
+    border-radius: 70px;
+    
 }
 
 .other-buttons {
@@ -376,34 +451,27 @@ body {
 
 
   .control-button {
-    width: 40px; /* Ширина кнопок */
-    height: 40px; /* Висота кнопок */
-    font-size: 18px; /* Розмір шрифту кнопок */
+    width: 40px; 
+    height: 40px; 
+    font-size: 18px;
     background-color: rgba(20, 1, 114, 0.8);
     border: none;
     border-radius: 5px;
     color: white;
     cursor: pointer;
-    margin: 2px; /* Внутрішні відступи між кнопками */
+    margin: 2px; 
   }
 
-  /* Стилі для наведення курсора на кнопки */
   .control-button:hover {
     background-color: rgba(20, 1, 114, 1);
   }
 
-  .score-container {
-    width: 50%;
-    height: 60%;
-    margin-top: 10px;
-
-  }
   .score-title {
     font-size: 1em;
   }
   .score-value {
-    margin-top: 5px;
-    font-size: 0.7em;
+    margin: auto;
+    font-size: 0.9em;
   }
 
 }
