--- a/styles.css
+++ b/styles.css
@@ -142,6 +142,7 @@ body {
 }
 .menu-button {
   margin: 10px;
+  text-align: center;
 }
 .music-button {
   width: 40px;
@@ -349,7 +350,7 @@ ul {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;
+  text-align: justify;
 }
 
 .buttons-menu {
